--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
 <body>
 <div class = "main-card">
   <form class = date-form>
-
-    <div class = "day-container">
-      <label for = "day">Day</label>
-      <input class = "day" type = "text" name = "day" placeholder = "DD" required />
-    </div>
+      <div class = "day-container">
+        <label for = "day">Day</label>
+        <input class = "day" type = "text" name = "day" placeholder = "DD" />
+      </div>
    
-  <div class = "month-container">
-    <label for = "month">Month</label>
-    <input class = "month" type = "text" name = "month" placeholder = "MM" required/>
-  </div>
+      <div class = "month-container">
+        <label for = "month">Month</label>
+        <input class = "month" type = "text" name = "month" placeholder = "MM" />
+      </div>
    
-  <div class = "year-container">
-    <label for = "year">Year</label>
-    <input class = "year" type = "text" name = "year" placeholder = "YYYY" required/>
-  </div>
+      <div class = "year-container">
+        <label for = "year">Year</label>
+        <input class = "year" type = "text" name = "year" placeholder = "YYYY" />
+      </div>
    
   </form>
   <span class="img-container"><img src = "./assets/images/icon-arrow.svg" alt ="arrow button" /></span>
