Added desktop styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="main.css" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Age calculator app</title>
 
   
@@ -36,10 +40,9 @@
     
 
   <div class = "output">
-    <h3 class = "years-output"> -- years</h3>
-    <h3 class = "months-output"> -- months</h3>
-    <h3 class = "days-output"> -- days</h3>
-
+    <h3 class = "years-output"> <span class="years-span">--</span> years</h3>
+    <h3 class = "months-output"> <span class="months-span">--</span> months</h3>
+    <h3 class = "days-output"> <span class ="days-span">--</span> days</h3>
   </div>
 
 
